--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "bootstrap-icons": "^1.11.0",
     "bootstrap-scss": "^5.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
