--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,13 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap-scss/bootstrap.scss",
+              "node_modules/bootstrap/scss/bootstrap.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
           "configurations": {
             "production": {
